--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,6 @@ button {
   background-color: transparent;
 }
 ul,
-li,
 ol {
   list-style-type: none;
 }
@@ -34,4 +33,7 @@ ol {
 }
 .ant-form-item {
   margin-bottom: 10px !important;
+}
+.text-center {
+  text-align: center;
 }
