--- a/src/pages/quiz/quiz.scss
+++ b/src/pages/quiz/quiz.scss
@@ -44,7 +44,7 @@
   &-card {
     position: relative;
     .ant-skeleton-title {
-      height: 300px !important;
+      height: 250px !important;
       width: 100% !important;
     }
     .ant-skeleton-paragraph {
@@ -56,7 +56,7 @@
       height: 100%;
     }
     .card-header {
-      height: 300px;
+      height: 250px;
       border-radius: 12px 12px 0 0;
       position: relative;
       &-star {
@@ -84,6 +84,7 @@
         }
       }
       .quiz-card-actions {
+        border-radius: 12px 12px 0 0;
         overflow: hidden;
         transition: all 0.3s ease;
         display: flex;
